1.3.5 (xxxx-xx-xx)
----
Bugfixes:

* Locale: some countries where in wrong continent.


1.3.4 (2013-02-07)
----
- Coding standards have changed for concatenating strings.
- Bugfix: template compiler now allows two equal iterations within another iteration.
- Rewrote SpoonLog so it doesn't use any statics, but requires you to create an instance.
- Changed method_exists to is_callable throughout the library.
- When using UTF-8 as charset forms will be forced to submit as UTF-8
- SpoonLocale: Added getConjunction() and getConjunctions().
- SpoonFilter::urlise(): Added third optional parameter $language. You can provide this to get
  language-specific alternatives for the '&' char.
- SpoonSession::destroy now works decently in Chrome under flaky circumstances
- SpoonForm::getTemplateExample has been cleaned up (in particular for checkboxes)
- SpoonFormTime::isValid now is a bit more precise and doesn't allow extra characters.
- Added some basic getters to SpoonDatabase
- SpoonFormDropDown will now allow you to combine option groups and regular values.
- Fixed XSS vulnerability in SpoonForm.
- Bugfix: Removes bare LFs so mailservers don't freak out.
- Bugfix: invalid variable. (thx to Rafael den Heijer).
- SpoonEmail: encapsulated recipients with quotes.


1.3.0 (2011-02-18)
----
- Template options may now start with an integer e.g. {option:404}
- The WHERE clause in SpoonDatabase::update and SpoonDatabase::delete may now be null instead of an
  empty string.
- Added option for headers.sortingIcon in datagrid.tpl - empty <img> elements are no longer shown
  for default sorting settings.
- Fixed the sorting problem when setting the sortParameter option in a datagrid.
- Bugfix: some classes were using non-existing exceptions, fixed this issue.
- Rewrote a few methods in SpoonFilter for consistency and performance reasons.
- Bugfix: when providing a template to SpoonTemplate::display a few extra checks are performed.